--- a/data/hero/ru/hero.yml
+++ b/data/hero/ru/hero.yml
@@ -2,7 +2,7 @@
 enable: true
 topTitle:  Привет, меня зовут Илья Севостьянов
 content: >
-  # Я здесь, чтобы помочь Вам с Робототехникой и IT 
+  # Помогу с проектами по робототехнике и компьютерному зрению
 
   Доверьте свой проект или задачу специалисту, который сделает это на высшем уровне и в срок.
 
