--- a/data/resumeSection/ru/resumeSection.yml
+++ b/data/resumeSection/ru/resumeSection.yml
@@ -31,17 +31,19 @@ education:
       #### Магистр Компьютерных Наук
 
       
-      Оканчиваю в 2021 г. Университет Иннополис. Дипломная работа посвящена динамической ходьбе четвероногого робота.
+      Окончил Университет Иннополис. Дипломная работа была посвящена динамической ходьбе четвероногого робота.
 
-      ###### Достижение: 
+      ###### Достижения: 
 
       * [Диплом за отличную успеваемость в осеннем и весеннем семестрах 2020 года](../../../ru/files/inno_diploma_excellent_academic.jpg)
+
+      * [Диплом за вклад в науку, 2021 год](../../../ru/files/diploma_for_outstanding_contribution_to_science.jpg)
 
     time: 2019-2021
 
 experience:
   - content: >
-      #### JBL Robotics
+      #### JBL Robotics, г. Москва, Россия
       
       ###### Помощник Инженера
 
@@ -52,7 +54,7 @@ experience:
     time: 2018-2019
 
   - content: >
-      #### Лаборатория Робототехники Университета Иннополис
+      #### Лаборатория Робототехники Университета Иннополис, г. Иннополис, Россия
       
       ###### Стажер
 
@@ -63,7 +65,7 @@ experience:
     time: 2019, июн - 2020, сен
 
   - content: >
-      #### Соревнование "Аэробот 2020"
+      #### Соревнование "Аэробот 2020", г. Таганрог, Россия
       
       ###### Специалист по Компьютерному Зрению
 
@@ -78,3 +80,20 @@ experience:
       * Победа в соревновании
 
     time: 2019, окт - 2020, нов
+
+  - content: >
+      #### Лаборатория Беспилотных Технологий, г. Иннополис, Россия
+      
+      ###### Специалист по Компьютерному Зрению
+
+      Участвую в проектах с беспилотными ТС и летательными аппаратами
+
+      * Разработал LED систему компьютерного зрения для определения положения и ориентации посадочной площадки БПЛА "день-ночь"
+
+      * Сделал вклад в систему определения зоны приземления БПЛА для задачи безопасной автономной посадки
+
+      ###### Достижение: 
+      
+      * 2 статьи РИНЦ и 1 IEEE
+
+    time: 2021, фев --
