--- a/data/serviceSection/ru/serviceSection.yml
+++ b/data/serviceSection/ru/serviceSection.yml
@@ -4,45 +4,55 @@ topTitle: Область деятельности
 title: >
   ## Услуги, Которые Я Предлагаю
 
-  Ниже представлен список услуг, которые я рад Вам предоставить. В случае, если то, что вас интересует, не представлено ниже, Вы все равно можете попробовать связаться со мной.
+  Ниже представлен список услуг, которые я рад Вам предоставить. В случае, если то, что Вас интересует, не представлено ниже, Вы все равно можете попробовать связаться со мной. Может, я что-то не указал.
 
 service:
   - content: >
       #### Робототехника
 
-      Я могу управлять роботами, рассчитывать кинематику, динамику и пр.
+      Я могу писать управление для роботов, рассчитывать кинематику, динамику и пр.
       
       
-      Кроме того, я могу сделать компьютерное зрение для него. К примеру, я много работал с OpenCV.
+      Кроме того, я могу сделать компьютерное зрение для него.
     image: images/service/robot.svg
   - content: >
       #### Программирование
 
       
-      Я программирую на Python, C и C++.
+      Я программирую на Python, MATLAB, C и C++.
       
       
-      Я могу выполнять университетские и курсовые задания, создавать телеграмм-ботов, работать с базами данных и т. д.
+      Я могу выполнять университетские и курсовые задания, создавать телеграмм-ботов, работать с базами данных, компьютерным зрением и т. д.
     image: images/service/program.svg
 
   - content: >
-      #### Arduino 
+      #### Компьютерное Зрение
 
-      
-      Буду рад поучаствовать в любых проектах, связанных с Arduino. 
-      
-      
-      Ардуино чрезвычайно удобны в использовании и являются отличным решением для быстрого создания прототипов, а также некомплексных проектов.
+      Могу принять участие в разработке систем компьютерного зрения. 
 
 
-    image: images/service/arduino.svg
+      Работаю с OpenCV, Pytorch, CUDA, большой опыт работы с сенсорами.
+      
+    image: images/service/cv.svg
 
-  - content: >
-      #### Веб-Дизайн
+  # - content: >
+  #     #### Arduino 
 
       
-      Я закончил полугодовой курс веб-дизайна в 2019 году.
+  #     Буду рад поучаствовать в любых проектах, связанных с Arduino. 
       
       
-      Я могу создавать презентации, чеклисты, фавиконы, постыв различных соцсетях, простые логотипы, статичные рекламные объявления и т. д.
-    image: images/service/ui-ux.svg
+  #     Ардуино чрезвычайно удобны в использовании и являются отличным решением для быстрого создания прототипов, а также некомплексных проектов.
+
+
+  #   image: images/service/arduino.svg
+
+  # - content: >
+  #     #### Веб-Дизайн
+
+      
+  #     Я закончил полугодовой курс веб-дизайна в 2019 году.
+      
+      
+  #     Я могу создавать презентации, чеклисты, фавиконы, постыв различных соцсетях, простые логотипы, статичные рекламные объявления и т. д.
+  #   image: images/service/ui-ux.svg
