--- a/data/aboutSection/ru/aboutSection.yml
+++ b/data/aboutSection/ru/aboutSection.yml
@@ -4,15 +4,22 @@ enable: true
 title: >
   ##  Обо мне
 
-  В данный момент я учусь в магистратуре Университета Иннополис, Россия. Моя специальность - робототехника и мехатроника. 
-content: >
-  ### Программирую и проектирую робототехнические системы.
-
+  Инженер-разработчик по компьютерному зрению, робототехник
   
-  Еще с детства я любил собирать схемы и программировать их так, чтобы они делали то, что я захочу. И я всегда стараюсь найти наиболее подходящее и простое в реализации решение.
+content: >
+  ### Программирую и проектирую робототехнические системы, системы компьютерного зрения.
 
 
-  Но робототехника - это не единственная сфера, в которой я работаю. Кроме этого, я программирую телеграм ботов, выполняю университетские и олимпиадные задания, помогаю с курсовыми и т. д.
+  Получил бакалавриат в области мехатроники и робототехники в МГТУ им. Н. Э. Баумана, после чего прошел отбор на магистратуру в Университет Иннополис, специализация "Робототехника и компьютерное зрение".
+
+
+  Участвовал в множестве проектов, связанных как с управлением робототехническими системами, так и с компьютерным зрением: слежение БПЛА за полосой движения, обнаружение посадочной площадки БПЛА, манипулятор-бариста, пинг-понг манипулятор, автоматизация автомойки, четырехногий робот и так далее.
+
+
+  Сейчас же развиваюсь именно в области компьютерного зрения. В дальнейшем вижу себя именно в этой сфере.
+
+
+  На данный момент работаю в Лаборатории Беспилотных Технологий Университета Иннополис в должности специалист по компьютерному зрению.
   
 button1Name: Нанять меня
 button2Name: Загрузить CV
