updated web site

--- a/data/aboutSection/en/aboutSection.yml
+++ b/data/aboutSection/en/aboutSection.yml
@@ -11,7 +11,7 @@ content: >
   I received a bachelor's degree in mechatronics and robotics at Bauman Moscow State Technical University, after which I graduated a master's degree from Innopolis University, specializing in "Robotics and Computer Vision".
 
 
-  I have participated in many projects related both to robotic systems control and computer vision: UAV lane tracking, UAV landing platform detection, barista manipulator, ping-pong manipulator, car wash automation, four-legged robot and so on.
+  I have participated in many projects related both to robotic systems control and computer vision: UAV lane tracking, UAV landing platform detection, barista manipulator, ping-pong manipulator, car wash automation, four-legged robot, ADAS and so on.
 
 
   Now I am developing in the field of computer vision. In the future I see myself in this sphere exactly.
