--- a/data/aboutSection/ru/aboutSection.yml
+++ b/data/aboutSection/ru/aboutSection.yml
@@ -13,7 +13,7 @@ content: >
   Получил бакалавриат в области мехатроники и робототехники в МГТУ им. Н. Э. Баумана, после чего прошел отбор на магистратуру в Университет Иннополис, специализация "Робототехника и компьютерное зрение".
 
 
-  Участвовал в множестве проектов, связанных как с управлением робототехническими системами, так и с компьютерным зрением: слежение БПЛА за полосой движения, обнаружение посадочной площадки БПЛА, манипулятор-бариста, пинг-понг манипулятор, автоматизация автомойки, четырехногий робот и так далее.
+  Участвовал в множестве проектов, связанных как с управлением робототехническими системами, так и с компьютерным зрением: слежение БПЛА за полосой движения, обнаружение посадочной площадки БПЛА, манипулятор-бариста, пинг-понг манипулятор, автоматизация автомойки, четырехногий робот, АДАС и так далее.
 
 
   Сейчас же развиваюсь именно в области компьютерного зрения. В дальнейшем вижу себя именно в этой сфере.
