--- a/data/hero/en/hero.yml
+++ b/data/hero/en/hero.yml
@@ -2,7 +2,7 @@
 enable: true
 topTitle: Hello, I am Ilia Sevostianov
 content: >
-  # I am here to help you with Robotics & CV Projects
+  # Robotics & Computer Vision Projects
 
   Entrust your project or task to the expert who will do it at the highest level and on time
 buttonName: Contact me
