--- a/data/hero/ru/hero.yml
+++ b/data/hero/ru/hero.yml
@@ -1,8 +1,8 @@
 ---
 enable: true
-topTitle:  Привет, меня зовут Илья Севостьянов
+topTitle:  Привет, меня зовут Севостьянов Илья
 content: >
-  # Помогу с проектами по робототехнике и компьютерному зрению
+  # Проекты и задачи по робототехнике и компьютерному зрению
 
   Доверьте свой проект или задачу специалисту, который сделает это на высшем уровне и в срок.
 
