--- a/data/serviceSection/ru/serviceSection.yml
+++ b/data/serviceSection/ru/serviceSection.yml
@@ -10,28 +10,25 @@ service:
   - content: >
       #### Робототехника
 
-      Я могу писать управление для роботов, рассчитывать кинематику, динамику и пр.
+      Управление для роботов, подбор компонент, расчет кинематики, динамики и пр.
       
-      
-      Кроме того, я могу сделать компьютерное зрение для него.
     image: images/service/robot.svg
   - content: >
       #### Программирование
 
       
-      Я программирую на Python, MATLAB, C и C++.
+      Python, MATLAB, C и C++.
       
       
-      Я могу выполнять университетские и курсовые задания, создавать телеграмм-ботов, работать с базами данных, компьютерным зрением и т. д.
+      Университетские и курсовые задания, создание телеграмм-ботов, базы данных, компьютерное зрение и т. д.
     image: images/service/program.svg
 
   - content: >
       #### Компьютерное Зрение
 
-      Могу принять участие в разработке систем компьютерного зрения. 
+      Разработка систем компьютерного зрения. 
 
-
-      Работаю с OpenCV, Pytorch, CUDA, большой опыт работы с сенсорами.
+      OpenCV, Pytorch, CUDA, ONNX, TensorRT, подбор сенсоров и пр.
       
     image: images/service/cv.svg
 
