--- a/data/skillSection/ru/skillSection.yml
+++ b/data/skillSection/ru/skillSection.yml
@@ -10,7 +10,7 @@ content: >
 image: images/skill/skill_image.png
 
 skill:
-  - title: ROS
+  - title: ROS 1/2
     percent: 80
   - title: Git
     percent: 80
@@ -32,6 +32,9 @@ skill:
   - title: Pytorch
     percent: 70
 
+  - title: NN-Deployment
+    percent: 60
+     
   - title: Detectron2
     percent: 80
 
