--- a/data/resumeSection/en/resumeSection.yml
+++ b/data/resumeSection/en/resumeSection.yml
@@ -38,6 +38,16 @@ education:
       * [Diploma for outstanding contribution to science, 2021 year](../../../ru/files/diploma_for_outstanding_contribution_to_science.jpg)
     time: 2019-2021
 
+  - content: >
+      #### Neural Networks and Deep Learning
+
+      
+      Completed the course from DeepLearning.AI about neural networks.
+
+      * [Certificate](../../../ru/files/Coursera_Deep_Learning_Course.pdf)
+
+    time: окт., 2021
+
 experience:
   - content: >
       #### JBL Robotics, Moscow, Russia
