--- a/data/resumeSection/ru/resumeSection.yml
+++ b/data/resumeSection/ru/resumeSection.yml
@@ -41,6 +41,17 @@ education:
 
     time: 2019-2021
 
+  - content: >
+      #### Neural Networks and Deep Learning
+
+      
+      Прошел курс от DeepLearning.AI по нейронным сетям.
+
+      * [Подтверждение](../../../ru/files/Coursera_Deep_Learning_Course.pdf)
+
+    time: окт., 2021
+
+
 experience:
   - content: >
       #### JBL Robotics, г. Москва, Россия
