--- a/data/resumeSection/ru/resumeSection.yml
+++ b/data/resumeSection/ru/resumeSection.yml
@@ -16,17 +16,43 @@ tab1Target: education
 tab2Target: experience
 
 education:
+
   - content: >
-      #### Бакалавр Мехатроники и Робототехники
+      ####  Сверточные Нейронные Сети
+
+      Закончил 4ый курс в специализации "Глубокое обучение" от DeepLearning.AI.
+
+      * [Сертификат](https://www.coursera.org/account/accomplishments/certificate/BE4BCELFSMGP)
+    time: янв, 2022
+
+  - content: >
+      ####  Структура Проектов Машинного Обучения
 
       
-      Окончил МГТУ им. Н. Э. Баумана. Дипломный проект был посвящен разработке и управлению трехзвенным вертикально шагающим роботом.
+      Закончил 3ий курс в специализации "Глубокое обучение" от DeepLearning.AI.
 
-      ###### Достижение: 
+      * [Сертификат](https://www.coursera.org/account/accomplishments/certificate/VU3YWM6EYQ4J)
+    time: дек, 2021
 
-      * Лучший студент кафедры робототехники (2018)
+  - content: >
+      #### Улучшение Нейронных Сетей: Регулировка гиперпараметров, регуляризация и оптимизация
+      
+      Закончил 2ой курс в специализации "Глубокое обучение" от DeepLearning.AI.
 
-    time: 2015-2019
+      * [Сертификат](https://www.coursera.org/account/accomplishments/certificate/Y5KRD3B3RT95)
+
+    time: нов, 2021
+
+  - content: >
+      #### Нейронные сети и Глубокое Обучение
+
+      
+      Закончил 1ый курс в специализации "Глубокое обучение" от DeepLearning.AI.
+
+      * [Сертификат](https://www.coursera.org/account/accomplishments/certificate/2Z4YTDCCHFZU)
+
+    time: окт, 2021
+
   - content: >
       #### Магистр Компьютерных Наук
 
@@ -42,38 +68,36 @@ education:
     time: 2019-2021
 
   - content: >
-      #### Neural Networks and Deep Learning
+      #### Бакалавр Мехатроники и Робототехники
 
       
-      Прошел курс от DeepLearning.AI по нейронным сетям.
+      Окончил МГТУ им. Н. Э. Баумана. Дипломный проект был посвящен разработке и управлению трехзвенным вертикально шагающим роботом.
 
-      * [Подтверждение](../../../ru/files/Coursera_Deep_Learning_Course.pdf)
+      ###### Достижение: 
 
-    time: окт., 2021
+      * Лучший студент кафедры робототехники (2018)
+
+    time: 2015-2019
+
 
 
 experience:
   - content: >
-      #### JBL Robotics, г. Москва, Россия
+      #### Лаборатория Беспилотных Технологий, г. Иннополис, Россия
       
-      ###### Помощник Инженера
+      ###### Специалист по Компьютерному Зрению
 
-      * Разработаны ноды ROS для управления роботом-бариста
+      Участвую в проектах с беспилотными ТС и летательными аппаратами
 
-      * Разработал подставки для чашек и захват для робота.
+      * Разработал LED систему компьютерного зрения для определения положения и ориентации посадочной площадки БПЛА "день-ночь"
 
-    time: 2018-2019
+      * Сделал вклад в систему определения зоны приземления БПЛА для задачи безопасной автономной посадки
 
-  - content: >
-      #### Лаборатория Робототехники Университета Иннополис, г. Иннополис, Россия
+      ###### Достижение: 
       
-      ###### Стажер
+      * 2 статьи РИНЦ и 1 IEEE
 
-      * Разработал компьютерное зрение для манипулятора UR10, чтобы определять положение мяча для настольного тенниса с помощью RealSense D435i по отношению к базе робота.
-
-      * [Отзыв и рекомендации от руководителя](../../../ru/files/Igor_Gaponov_Recommendation_ru.pdf)
-
-    time: 2019, июн - 2020, сен
+    time: 2021, фев --
 
   - content: >
       #### Соревнование "Аэробот 2020", г. Таганрог, Россия
@@ -93,18 +117,24 @@ experience:
     time: 2019, окт - 2020, нов
 
   - content: >
-      #### Лаборатория Беспилотных Технологий, г. Иннополис, Россия
+      #### Лаборатория Робототехники Университета Иннополис, г. Иннополис, Россия
       
-      ###### Специалист по Компьютерному Зрению
+      ###### Стажер
 
-      Участвую в проектах с беспилотными ТС и летательными аппаратами
+      * Разработал компьютерное зрение для манипулятора UR10, чтобы определять положение мяча для настольного тенниса с помощью RealSense D435i по отношению к базе робота.
 
-      * Разработал LED систему компьютерного зрения для определения положения и ориентации посадочной площадки БПЛА "день-ночь"
+      * [Отзыв и рекомендации от руководителя](../../../ru/files/Igor_Gaponov_Recommendation_ru.pdf)
 
-      * Сделал вклад в систему определения зоны приземления БПЛА для задачи безопасной автономной посадки
-
-      ###### Достижение: 
+    time: 2019, июн - 2020, сен
+    
+  - content: >
+      #### JBL Robotics, г. Москва, Россия
       
-      * 2 статьи РИНЦ и 1 IEEE
+      ###### Помощник Инженера
 
-    time: 2021, фев --
+      * Разработаны ноды ROS для управления роботом-бариста
+
+      * Разработал подставки для чашек и захват для робота.
+
+    time: 2018-2019
+
