--- a/data/serviceSection/ru/serviceSection.yml
+++ b/data/serviceSection/ru/serviceSection.yml
@@ -20,7 +20,8 @@ service:
       Python, MATLAB, C и C++.
       
       
-      Университетские и курсовые задания, создание телеграмм-ботов, базы данных, компьютерное зрение и т. д.
+      Различные задачи, проекты, требующие программирования. 
+      
     image: images/service/program.svg
 
   - content: >
