--- a/data/testimonialSection/en/testimonialSection.yml
+++ b/data/testimonialSection/en/testimonialSection.yml
@@ -5,6 +5,10 @@ title: >
   ## What Do People Say About Me?
 
 testimonial:
+  - name: Nikita V.
+    comment: I needed the NN that detects some objects on drone photos and blurs the backdrop. Ilia did it in 2 days and the results are great! 
+    time: Jan 05, 2022
+    star: 5
   - name: Vladimir
     comment: Everything was at the highest level. Tasks were done on time, explained and well-structured. (translated)
     time: Dec 19, 2020
