--- a/data/testimonialSection/ru/testimonialSection.yml
+++ b/data/testimonialSection/ru/testimonialSection.yml
@@ -5,6 +5,10 @@ title: >
   ## Что Обо Мне Говорят Клиенты?
 
 testimonial:
+  - name: Никита В.
+    comment: Мне нужна была нейронная сеть, которая обнаруживает объекты на фотографиях с дрона и замыливает задний фон. Илья справился за 2 дня - и результат отличный!
+    time: Jan 05, 2022
+    star: 5
   - name: Владимир
     comment: Все получилось в сроки, каждую программу объяснил и расписал, все на высшем уровне.
     time: Дек 19, 2020
