--- a/data/skillSection/en/skillSection.yml
+++ b/data/skillSection/en/skillSection.yml
@@ -22,8 +22,8 @@ skill:
   - title: C
     percent: 70  
 
-  - title: САПР (Solidworks, Compas 3D)
-    percent: 70
+  - title:  Solidworks, Compas 3D
+    percent: 55
 
   - title: OpenCV
     percent: 90
@@ -32,7 +32,7 @@ skill:
     percent: 70
 
   - title: NN-Deployment
-    percent: 60
+    percent: 65
      
   - title: Detectron2
     percent: 80
