added sertificates links

--- a/data/resumeSection/en/resumeSection.yml
+++ b/data/resumeSection/en/resumeSection.yml
@@ -91,6 +91,8 @@ experience:
 
       * Contributed to UAV landing zone detection system for the task of safe autonomous landing
 
+      * Developed LDWS for the bus. I was responsible for processing the output of the neural network, deployment and the proper operation of the camera.
+
       ###### Achievements: 
       
       * IEEE articles
