--- a/data/resumeSection/ru/resumeSection.yml
+++ b/data/resumeSection/ru/resumeSection.yml
@@ -93,6 +93,8 @@ experience:
 
       * Сделал вклад в систему определения зоны приземления БПЛА для задачи безопасной автономной посадки
 
+      * Разработал систему помощи водители при съезде с полосы для автобуса. Был ответственен за обработку выхода нейронной сети, ее деплой и функционирование камеры.
+
       ###### Достижение: 
       
       * 2 статьи РИНЦ и 1 IEEE
@@ -126,7 +128,7 @@ experience:
       * [Отзыв и рекомендации от руководителя](../../../ru/files/Igor_Gaponov_Recommendation_ru.pdf)
 
     time: 2019, июн - 2020, сен
-    
+
   - content: >
       #### JBL Robotics, г. Москва, Россия
       
