added new certificate

--- a/data/resumeSection/en/resumeSection.yml
+++ b/data/resumeSection/en/resumeSection.yml
@@ -18,6 +18,14 @@ tab2Target: experience
 education:
 
   - content: >
+      ####  Sequence Models
+
+      Completed 5th course in Deep Learning specialization from DeepLearning.AI.
+
+      * [Certificate](https://www.coursera.org/account/accomplishments/certificate/KMPNDEUWEPZM)
+    time: jan, 2022
+
+  - content: >
       ####  Convolutional Neural Networks
 
       
