--- a/data/resumeSection/ru/resumeSection.yml
+++ b/data/resumeSection/ru/resumeSection.yml
@@ -18,6 +18,14 @@ tab2Target: experience
 education:
 
   - content: >
+      ####  Последовательные Модели
+
+      Закончил 5ый курс в специализации "Глубокое обучение" от DeepLearning.AI.
+
+      * [Сертификат](https://www.coursera.org/account/accomplishments/certificate/KMPNDEUWEPZM)
+    time: янв, 2022
+
+  - content: >
       ####  Сверточные Нейронные Сети
 
       Закончил 4ый курс в специализации "Глубокое обучение" от DeepLearning.AI.
