updated the website

--- a/config.toml
+++ b/config.toml
@@ -63,6 +63,7 @@ DefaultContentLanguage = "en"
     [languages.en.params.address]
     address = "420500 Innopolis, Russia"
     email = "sevocrear@gmail.com"
+    telegram = "sevocrear"
     openingHours = "Open from 8 a.m. to 8 p.m."
 
   [languages.ru]
@@ -123,20 +124,13 @@ DefaultContentLanguage = "en"
     [languages.ru.params.address]
     address = "420500 Иннополис, Россия"
     email = "sevocrear@gmail.com"
+    telegram = "sevocrear"
     openingHours = "Открыт для заявок с 8 до 20"
 
 [params]
-copyright = "All right reserved copyright © Portio 2020"
+copyright = "All right reserved copyright © Portio 2022"
 footerLogo = "images/contact/widget-logo.png"
-formspreeURL = "https://formspree.io/f/mzbkkzbe"
-googleAnalytics = "G-RZPCD5E5NB"
 logo = "images/site-navigation/logo.png"
-
-[params.map]
-APIkey = "AIzaSyBVD82A8IiQA-F2AeMAacdMtYO_Con5Hy0"
-latitude = "55.752104"
-longitude = "48.744557"
-pinImage = "images/pin.png"
 
 # Social icons
 [[params.social]]
