--- a/data/aboutSection/en/aboutSection.yml
+++ b/data/aboutSection/en/aboutSection.yml
@@ -6,16 +6,12 @@ title: >
 
   Computer Vision engineer, robotics engineer
 content: >
-  ### I program and design robotics systems, computer vision systems.
+  ### I program and design computer vision systems.
 
   I received a bachelor's degree in mechatronics and robotics at Bauman Moscow State Technical University, after which I graduated a master's degree from Innopolis University, specializing in "Robotics and Computer Vision".
 
 
-  I have participated in many projects related both to robotic systems control and computer vision: UAV lane tracking, UAV landing platform detection, barista manipulator, ping-pong manipulator, car wash automation, four-legged robot, ADAS and so on.
-
-
-  Now I am developing in the field of computer vision. In the future I see myself in this sphere exactly.
-
+  I have participated in many projects related both to robotic systems control and computer vision: UAV lane tracking, UAV landing platform detection, barista manipulator, ping-pong manipulator, car wash automation, four-legged robot, ADAS, autonomous truck, railways safe zone exit alarm system and so on.
 
   At the moment I am working in the Autonomous Technologies Laboratory of Innopolis University as a computer vision specialist.
 button1Name: Hire me
