--- a/data/aboutSection/ru/aboutSection.yml
+++ b/data/aboutSection/ru/aboutSection.yml
@@ -7,16 +7,14 @@ title: >
   Инженер-разработчик по компьютерному зрению, робототехник
   
 content: >
-  ### Программирую и проектирую робототехнические системы, системы компьютерного зрения.
+  ### Программирую и проектирую системы компьютерного зрения.
 
 
   Получил бакалавриат в области мехатроники и робототехники в МГТУ им. Н. Э. Баумана, после чего прошел отбор на магистратуру в Университет Иннополис, специализация "Робототехника и компьютерное зрение".
 
 
-  Участвовал в множестве проектов, связанных как с управлением робототехническими системами, так и с компьютерным зрением: слежение БПЛА за полосой движения, обнаружение посадочной площадки БПЛА, манипулятор-бариста, пинг-понг манипулятор, автоматизация автомойки, четырехногий робот, АДАС и так далее.
+  Участвовал в множестве проектов, связанных как с управлением робототехническими системами, так и с компьютерным зрением: слежение БПЛА за полосой движения, обнаружение посадочной площадки БПЛА, манипулятор-бариста, пинг-понг манипулятор, автоматизация автомойки, четырехногий робот, АДАС, беспилотный КАМАЗ, система сигнализации выхода из безопасной зоны работы на железной дороге и так далее.
 
-
-  Сейчас же развиваюсь именно в области компьютерного зрения. В дальнейшем вижу себя именно в этой сфере.
 
 
   На данный момент работаю в Лаборатории Беспилотных Технологий Университета Иннополис в должности специалист по компьютерному зрению.
