--- a/data/resumeSection/ru/resumeSection.yml
+++ b/data/resumeSection/ru/resumeSection.yml
@@ -103,6 +103,8 @@ experience:
 
       * Разработал систему помощи водители при съезде с полосы для автобуса. Был ответственен за обработку выхода нейронной сети, ее деплой и функционирование камеры.
 
+      * Развертывание нейронных сетей и калибровка сенсоров на КАМАЗе, который должен выполнять определенную миссию на бездорожье автономно
+
       ###### Достижение: 
       
       * 2 статьи РИНЦ и 1 IEEE
