--- a/data/resumeSection/en/resumeSection.yml
+++ b/data/resumeSection/en/resumeSection.yml
@@ -100,6 +100,8 @@ experience:
       * Contributed to UAV landing zone detection system for the task of safe autonomous landing
 
       * Developed LDWS for the bus. I was responsible for processing the output of the neural network, deployment and the proper operation of the camera.
+      
+      * Neural networks deployment and sensor calibration on KAMAZ truck
 
       ###### Achievements: 
       
