--- a/data/skillSection/en/skillSection.yml
+++ b/data/skillSection/en/skillSection.yml
@@ -18,12 +18,10 @@ skill:
   - title: MATLAB
     percent: 70  
   - title: C++
-    percent: 70
-  - title: C
-    percent: 70  
+    percent: 60
 
   - title:  Solidworks, Compas 3D
-    percent: 55
+    percent: 50
 
   - title: OpenCV
     percent: 90
@@ -33,7 +31,10 @@ skill:
 
   - title: NN-Deployment
     percent: 65
-     
+  
+  - title: clearML
+    percent: 60
+    
   - title: Detectron2
     percent: 80
 
